--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -35,8 +35,7 @@
 					</ul>
 				</nav>
 	
-				<!-- Banner -->
-				<!-- Note: The "styleN" class below should match that of the header element. -->
+
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
@@ -77,7 +76,7 @@
 										<div class="col-2 col-12-medium">
 											<br /><br /><br /><br />
 											<ul class="actions">
-												<li ><a href="generic.html" class="button">Learn more</a></li>
+												<li ><a href="generic.html" class="button">Learn more&emsp;阅读</a></li>
 											</ul>
 										</div>
 									</div>
@@ -87,44 +86,36 @@
 							<section id="one" >
 								<div class="inner">
 									<h2 align="center">MORE</h2>
-									<div class="row">
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
+									<div class="box alt">	
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-1"><h1 align="center">&emsp;&emsp;&emsp;&emsp;</h1></div>
+											<div class="col-2"><span class="image fit"><img src="images/pic01.jpg" alt=""/></span>
+											<h4 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h4>
+											<h5 align="center">Lana Del Rey</h5>
 											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
+											</div>
+											<div class="col-0.5"><p>&emsp;&emsp;&emsp;</p></div>
+											<div class="col-2"><span class="image fit"><img src="images/pic01.jpg" alt=""/></span>
+											<h4 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h4>
+											<h5 align="center">Lana Del Rey</h5>
 											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
+											</div>	
+											<div class="col-0.5"><p>&emsp;&emsp;&emsp;</div>
+											<div class="col-2"><span class="image fit"><img src="images/pic01.jpg" alt=""/></span>
+											<h4 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h4>
+											<h5 align="center">Lana Del Rey</h5>
 											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+											</div>	
+											<div class="col-0.5"><p>&emsp;&emsp;&emsp;</div>
+											<div class="col-2"><span class="image fit"><img src="images/pic01.jpg" alt=""/></span>
+												<h4 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h4>
+												<h5 align="center">Lana Del Rey</h5>
+												<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+											</div>	
 										</div>
 									</div>
+
+									
 								</div>
 							</section>
 
@@ -269,6 +260,5 @@
 			<script src="../assets/js/breakpoints.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
-
 	</body>
 </html>
