--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										<img src="images/pic4.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Musical Column/homepage.html" class="link">Musical Column</a></h3>
+										<h3><a href="musical column/homepage.html" class="link">Musical Column</a></h3>
 										<p>Personal music reviews, annual summaries and appreciation of vinyls, etc</p>
 									</header>
 								</article>
