--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -111,11 +111,22 @@
 												<h4 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h4>
 												<h5 align="center">Lana Del Rey</h5>
 												<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-											</div>	
+											</div>
+											
 										</div>
 									</div>
+									<ul align="center" class="pagination">
+										<li><span class="button small disabled">Prev</span></li>
+										<li><a href="#" class="page active">1</a></li>
+										<li><a href="#" class="page">2</a></li>
+										<li><a href="#" class="page">3</a></li>
+										<li><span>&hellip;</span></li>
+										<li><a href="#" class="page">8</a></li>
+										<li><a href="#" class="page">9</a></li>
+										<li><a href="#" class="page">10</a></li>
+										<li><a href="#" class="button small">Next</a></li>
+									</ul>
 
-									
 								</div>
 							</section>
 
