--- a/Notes/homepage.html
+++ b/Notes/homepage.html
@@ -33,7 +33,7 @@
 						<li><a href="../Instruction.html">Introduction</a></li>
 						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 						<li><a href="../Notes/homepage.html">Notes</a></li>
-						<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+						<li><a href="../musical column/homepage.html">Musical Column</a></li>
 						<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
 						<li><a href="../Album/homepage.html">Album</a></li>
 					</ul>
