--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -168,22 +168,18 @@
 								</div>
 							</section>
 
-							<section id="two" >
+							<section id="one" >
 								<div class="inner">
 									<div class="row">
-										<div class="col-3 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+										<div class="col-5 col-12-medium">
+											<a href="#"><span class="image fit"><img href="#" src="images/pic01.jpg" alt="" /></span></a>
 										</div>
 										<div class="col-7 col-12-medium">
-											<h1 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h1>
+											</br>
+											<h1 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h1>
 											<h3 align="center">Lana Del Rey</h3>
 											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<br /><br /><br /><br />
-											<ul class="actions">
-												<li ><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
+											<h1 align="center">8.0</h1>
 										</div>
 									</div>
 								</div>
@@ -192,83 +188,90 @@
 							<section id="one" >
 								<div class="inner">
 									<h2 align="center">MORE</h2>
-									<div class="row">
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-										</div>
-										<div class="col-2 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
-											<h4 align="center">Lana Del Rey</h4>
-											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+									<div id="module_new1" class="module_new active_new">
+										<div class="box alt">
+											<div class="row gtr-50 gtr-uniform">	
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+											</div>
 										</div>
 									</div>
+
+									<div id="module_new2" class="module_new">
+										<div class="box alt">
+											<div class="row gtr-50 gtr-uniform">	
+												<div class="col-3"><span class="image fit"><a href="#"><img src="../images/pic1.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+													<h5 align="center">Lana Del Rey</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<ul align="center" class="pagination">
+										<li onclick="changeModule_new(1)"><span class="button small">Prev</span></li>
+										<li onclick="changeModule_new(1)"><a class="page">1</a></li>
+										<li onclick="changeModule_new(2)"><a class="page">2</a></li>
+										<li onclick="changeModule_new(2)"><span class="button small">Next</span></li>
+									</ul>
+									
+									
 								</div>
 							</section>
 
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<div class="row">
-										<div class="col-4 col-12-medium">
-											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-										</div>
-										<div class="col-8 col-12-medium">
-											<h3>Faucibus consequat lorem</h3>
-											<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-										</div>
-									</div>
-								</div>
-
+							<section id="one" class="tiles">
+								<article>
+									<span class="image">
+										<img src="../images/pic1.jpg" alt="" />
+									</span>
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h3><a href="Introduction/.html" class="link">Annual Review</a></h3>
+										<p>年度回顾</p>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-								</div>
-							</section>
-
-							<section id="three">
-								<div class="inner">
+								</article>
+								<article>
+									<span class="image">
+										<img src="../images/pic2.jpg" alt="" />
+									</span>
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h3><a href="Scientific Works/homepage.html" class="link">Appreciation of Vinyls</a></h3>
+										<p>黑胶鉴赏</p>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
+								</article>
 							</section>
 
 					</div>
@@ -315,6 +318,22 @@
 				  }
 				}
 			  </script>
+
+			<script>
+				function changeModule_new(pageNumber) {
+				// Hide all modules
+				var modules = document.querySelectorAll('.module_new');
+				modules.forEach(function(module) {
+					module.classList.remove('active_new');
+				});
+			
+				// Show the selected module
+				var selectedModule = document.getElementById('module_new' + pageNumber);
+				if (selectedModule) {
+					selectedModule.classList.add('active_new');
+				}
+				}
+			</script>
 
 	</body>
 </html>
